# esp32s3_paper_test

./: .gitignore  CMakeLists.txt  custom_linker_sections.ld  noota_16MB.csv  partitions.csv  sdkconfig  sdkconfig.old
appendix/font2data/: Mplus2-Light_12.h  Mplus2-Light_16.h  Mplus2-Light_18.h  Mplus2-Light_26.h  Mplus2-Light_chars.txt  Mplus2-Light_chars_griflist.txt  export-griflist.py  f2d.py  f2d_old.py  joyo_joyogai_jinmei.txt  joyo_joyogai_jinmei_griflist.txt  lost_griff.txt  mgenplus-1m-light_chars.txt  readme.md  txt2griflist.py  比較用ログ.txt
appendix/png2heder/: ayamelogo4bit.h  ayamelogo4bit2.h  p2h.py  p2p16.py
appendix/uart_test/: cli.py  gui.py  main.py  raw_packet_test.py  readme.md  uart.ttl  uart_client.py
main/: CMakeLists.txt  Mplus2-Light_16.h  ayamelogo.h  bg1.h  bg2.h  command_handlers.c  command_handlers.h  epd_board_m5papers3.c  epd_board_m5papers3.h  epd_main.c  epd_text.c  epd_text.h  epd_transition.c  epd_transition.h  epd_wrapper.c  epd_wrapper.h  file_transfer.c  file_transfer.h  gt911.c  gt911.h  ichi.h  protocol.h  sdcard_manager.c  sdcard_manager.h  testdata.h  uart_command.c  uart_command.h  usb_msc.c  usb_msc.h
manual/: gt911-hardware-spec.md  touchscreen-implementation-spec.md  uart_protocol_spec.md
